| Summary: | ASTERISK-27378: Modules: Fix issues with CLI completion. | ||
| Reporter: | Corey Farrell (coreyfarrell) | Labels: | |
| Date Opened: | 2017-10-30 00:32:15 | Date Closed: | 2017-10-30 17:04:49 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Applications/app_confbridge Applications/app_meetme Core/General |
| Versions: | 13.17.2 GIT 15.0.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | * app_meetme and app_confbridge use ast_module_helper to check if a module is loaded instead of ast_module_check.
* ast_module_helper should only list reload classes when 'needreload' is requested. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2017-10-30 00:32:16.267-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Friendly Automation (friendly-automation) 2017-10-30 17:04:50.524-0500 Change 6935 merged by Jenkins2: Modules: Fix issues with CLI completion. [https://gerrit.asterisk.org/6935|https://gerrit.asterisk.org/6935] By: Friendly Automation (friendly-automation) 2017-10-30 17:19:26.869-0500 Change 6934 merged by Joshua Colp: Modules: Fix issues with CLI completion. [https://gerrit.asterisk.org/6934|https://gerrit.asterisk.org/6934] By: Friendly Automation (friendly-automation) 2017-10-30 17:19:45.898-0500 Change 6933 merged by Joshua Colp: Modules: Fix issues with CLI completion. [https://gerrit.asterisk.org/6933|https://gerrit.asterisk.org/6933] By: Friendly Automation (friendly-automation) 2017-11-03 07:47:07.778-0500 Change 6968 merged by Jenkins2: Modules: Additional improvements to CLI completion. [https://gerrit.asterisk.org/6968|https://gerrit.asterisk.org/6968] By: Friendly Automation (friendly-automation) 2017-11-03 07:56:15.561-0500 Change 6942 merged by Joshua Colp: Modules: Additional improvements to CLI completion. [https://gerrit.asterisk.org/6942|https://gerrit.asterisk.org/6942] By: Friendly Automation (friendly-automation) 2017-11-03 08:06:18.146-0500 Change 6967 merged by Joshua Colp: Modules: Additional improvements to CLI completion. [https://gerrit.asterisk.org/6967|https://gerrit.asterisk.org/6967] By: Friendly Automation (friendly-automation) 2017-11-06 05:59:40.398-0600 Change 6974 merged by Jenkins2: Build System: Fix build failure caused by recent CLI improvements. [https://gerrit.asterisk.org/6974|https://gerrit.asterisk.org/6974] By: Friendly Automation (friendly-automation) 2017-11-06 06:19:10.399-0600 Change 6973 merged by Joshua Colp: Build System: Fix build failure caused by recent CLI improvements. [https://gerrit.asterisk.org/6973|https://gerrit.asterisk.org/6973] By: Friendly Automation (friendly-automation) 2017-11-06 06:32:17.470-0600 Change 6972 merged by Joshua Colp: Build System: Fix build failure caused by recent CLI improvements. [https://gerrit.asterisk.org/6972|https://gerrit.asterisk.org/6972] | ||